# matrix_calculator

./: .gitignore  CMakeLists.txt  rebuild.bat
app/: main.cpp
include/: decompositions.h  matrix.h  solvers.h
src/: decompositions.cpp  matrix.cpp  solvers.cpp
tests/: test_matrix.cpp
